<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tapadu</string>
    <string name="widget_name">Lanzador Tapadu</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="wgPalabraClave">Toca para decir la palabra clave</string>
    
    <string name="btRutina">Nueva Rutina</string>
    <string name="btConsRutina">Consulta Rutina</string>
    <string name="btSubeCatalogo">Subir Catálogo</string>
    <string name="btDescCatalogo">Descarga Catálogo</string>
    <string name="btConfig">Configuración</string>
    <string name="btSalir">Salir</string>
    
    <string name="msjErrorInstalarGoogleVoice">Para activar el reconocimiento de voz, debes instalar \"Google Voice Search\"</string>
    <string name="msjPreguntarInstalarGoogleVoice">¿Deseas instalar \"Google Voice Search\" desde Google Play?</string>
    <string name="btInstall">Instalar</string>
    <string name="btCancel">Cancelar</string>
    
    
    <string name="txtPaso1NuevaRutina">Selecciona la aplicación</string>
    <string name="txtPaso1Rutina">Paso 1 de 2</string>
    <string name="mpNuevaRutina">Estás en: Nueva rutina</string>
    <string name="txtPaso3NuevaRutina">Di la palabra clave</string>
    <string name="txtPaso2Rutina">Paso 2 de 2</string>
    <string name="btGuardarRutina">Guardar rutina</string>
    <string name="msjRutinaGuardada">La rutina ha sido guardada correctamente</string>
    <string name="hntEtiquetas">Escribe palabras que definan la aplicación</string>
    <string name="txtPaso3">Pulsa para decir la palabra clave</string>
    <string name="txtPaso3PalabraClave">La palabra clave capturada es:</string>
    <string name="msjPalabraClave">Diga la palabra clave</string>
    <string name="errCategoria">Se debe seleccionar una categoría</string>
    <string name="errEtiquetas">Se debe informar al menos una etiqueta</string>
    <string name="errPalabraClave">Se debe informar de la palabra clave</string>
    <string name="errPalabraClaveDuplicada">La palabra clave ya está siendo usada en otra rutina</string>
    <string name="msjLoadingApps">Cargando aplicaciones instaladas&#8239;</string>
    <string name="msjLoadingRutinas">Cargando rutinas instaladas&#8239;</string>

    <string name="txtPaso1Consulta">Selecciona la rutina sobre la que desees ver el detalle</string>
    <string name="mpConsultaRutina">Estás en: Consulta rutina</string>
    
    <string name="errNoExisteRutina1">La palabra clave "</string>
    <string name="errNoExisteRutina2">" no tiene asociada ninguna aplicación. Pulsa en consultar rutinas para revisar las rutinas dadas de alta.</string>
    <string name="errNoExisteRutinaIntentar">Pulsa para volver a intentarlo</string>
    <string name="errNoRecuperaVoz">ERROR: Se ha producido un error con Google Voice</string>
    
    <string name="mpDetalleRutina">Estás en: Detalle rutina</string>
    <string name="detRutinaCategoria">Categoría:</string>
    <string name="detRutinaEtiquetas">Etiquetas:</string>
    <string name="detRutinaPalabraClave">Palabra clave:</string>
    <string name="btModificarRutina">Modificar rutina</string>
    <string name="btSubirRutina">Subir rutina</string>
    <string name="btEliminarRutina">Eliminar rutina</string>
    <string name="titEliminarRutina">Eliminar rutina</string>
    <string name="msjEliminarRutina">¿Desea eliminar la rutina?</string>
    <string name="errEliminarRutina">Error al eliminar la rutina</string>
    <string name="btOk">Aceptar</string>
    
    <string name="modPalabraClave">Modifica la palabra clave</string>
    <string name="mpModRutina">Estás en: Detalle rutina > Modificar rutina</string>
    <string name="btModRutinaPC">Pulsa para modificar la palabra clave</string>
    <string name="btModRutina">Guardar cambios</string>
    <string name="msjRutinaModificada">La rutina ha sido modificada correctamente</string>
    <string name="msjRutinaEliminada">Se ha eliminado la rutina correctamente</string>
    
    <string name="titPrefIdioma">Idioma</string>
    <string name="msjPrefIdioma">Selecciona el idioma de la aplicación</string>
    <string name="titPreferencias">Preferencias</string>
    
    <string name="titSalir">Salir</string>
    <string name="titMsjSalir">¿Desea salir de la aplicación?</string>
    
</resources>

