<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:background="@drawable/border_red"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <Button
        android:id="@+id/btNuevaRutina"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/btRutina"
        android:text="@string/btRutina" />

    <Button
        android:id="@+id/btConsRutina"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btConsRutina"
        android:text="@string/btConsRutina" />

    <Button
        android:id="@+id/btConsCatalogo"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btConsCatalogo"
        android:text="@string/btConsCatalogo" />

    <Button
        android:id="@+id/btConfig"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btConfig"
        android:text="@string/btConfig" />

</LinearLayout>