<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/sepSubApartados"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/AppTheme.MigaPan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpNuevaRutina"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/AppTheme.Pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sepPasos"
                android:text="@string/txtPaso2NuevaRutina" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sepPasos"
                android:background="@drawable/border_rect"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPaso2SelCategoria"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <Spinner
                    android:id="@+id/spCategoria"
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sepPasos"
                    android:text="@string/txtPaso2Etiquetas"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/etListaEtiquetas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hntEtiquetas" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <TextView
                style="@style/AppTheme.Pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sepApartados"
                android:text="@string/txtPaso3NuevaRutina" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sepPasos"
                android:background="@drawable/border_rect"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btPalabraClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_microphone"
                    android:text="@string/txtPaso3" />

                <TextView
                    android:id="@+id/palabraClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sepApartados"
                    android:layout_marginTop="@dimen/sepApartados"
                    android:text="@string/txtPaso3PalabraClave"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/btGuardarRutina"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btGuardarRutina" />

            <TextView
                style="@style/AppTheme.Pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sepPasos"
                android:layout_marginTop="@dimen/sepPasos"
                android:text="@string/txtPaso2Rutina" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>