<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/sepSubApartados"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/AppTheme.MigaPan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mpDetalleRutina"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/detRutina_iconApp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="3dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/detRutina_nombreApp"
                    style="@style/AppTheme.Pasos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sepPasos" />

                <Button
                    android:id="@+id/btSubirRutina"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/btSubirRutina" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sepPasos"
                android:background="@drawable/border_rect"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detRutinaCategoria"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detRutina_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sepPasos"
                    android:text="@string/detRutinaEtiquetas"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detRutina_etiquetas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sepPasos"
                    android:text="@string/detRutinaPalabraClave"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/detRutina_palabraClave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btModificarRutina"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/btModificarRutina" />
                <Button
                    android:id="@+id/btEliminarRutina"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/btEliminarRutina" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>